--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>cz.fi.muni.pa165</groupId>
 	<artifactId>Winery-Management-System</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 
 	<name>Group project</name>
 
@@ -85,4 +85,8 @@
 			<version>10.10.2.0</version>
 		</dependency>
 	</dependencies>
+
+	<modules>
+		<module>winery-persistence</module>
+	</modules>
 </project>
