--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/>
 	</parent>
 
-	<groupId>cz.fi.muni.pa165</groupId>
+	<groupId>cz.muni.fi.pa165</groupId>
 	<artifactId>Winery-Management-System</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
