--- a/winery-api/pom.xml
+++ b/winery-api/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>cz.fi.muni.pa165</groupId>
+        <groupId>cz.muni.fi.pa165</groupId>
         <version>1.0-SNAPSHOT</version>
         <artifactId>Winery-Management-System</artifactId>
     </parent>
@@ -13,6 +13,6 @@
     <artifactId>Winery-api</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>Persistence</name>
+    <name>API</name>
     
 </project>
