--- a/winery-persistence/pom.xml
+++ b/winery-persistence/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>cz.fi.muni.pa165</groupId>
+		<groupId>cz.muni.fi.pa165</groupId>
 		<version>1.0-SNAPSHOT</version>
 		<artifactId>Winery-Management-System</artifactId>
 	</parent>
