--- a/winery-service/pom.xml
+++ b/winery-service/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>Winery-persistence</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cz.muni.fi.pa165</groupId>
+            <artifactId>Winery-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     
 </project>
