--- a/winery-service/pom.xml
+++ b/winery-service/pom.xml
@@ -43,6 +43,11 @@
             <version>3.15.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
     </dependencies>
     
 </project>
