rest module created

--- a/pom.xml
+++ b/pom.xml
@@ -91,5 +91,6 @@
 		<module>winery-api</module>
 		<module>winery-service</module>
 		<module>winery-sample-data</module>
+		<module>winery-rest</module>
 	</modules>
 </project>
