--- a/winery-mvc/pom.xml
+++ b/winery-mvc/pom.xml
@@ -16,7 +16,26 @@
     <name>MVC</name>
 
     <dependencies>
-
+        <dependency>
+            <groupId>cz.muni.fi.pa165</groupId>
+            <artifactId>Winery-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cz.muni.fi.pa165</groupId>
+            <artifactId>winery-sample-data</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
