--- a/winery-spring-mvc/pom.xml
+++ b/winery-spring-mvc/pom.xml
@@ -10,7 +10,7 @@
         <artifactId>Winery-Management-System</artifactId>
     </parent>
 
-    <artifactId>winery-spring-mvc</artifactId>
+    <artifactId>Winery-spring-mvc</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>MVC</name>
@@ -22,7 +22,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>cz.muni.fi.pa165</groupId>
+            <artifactId>Winery-sample-data</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
@@ -42,12 +47,6 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>cz.muni.fi.pa165</groupId>
-            <artifactId>winery-sample-data</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
