--- a/winery-spring-mvc/src/main/resources/Texts.properties
+++ b/winery-spring-mvc/src/main/resources/Texts.properties
@@ -3,10 +3,10 @@
 #navigation menu
 navigation.project=PA165 Winery Management System
 navigation.admin=Administration
-navigation.admin.orders=Wines
-navigation.admin.products=Feedbacks
-navigation.admin.customers=Harvests
-navigation.admin.categories=Grapes
+navigation.admin.wines=Wines
+navigation.admin.feedbacks=Feedbacks
+navigation.admin.harvests=Harvests
+navigation.admin.grapes=Grapes
 navigation.home=Home
 navigation.docs=Documentation
 navigation.about=About
