--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,52 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<pluginManagement>
+		  <plugins>
+			<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-compiler-plugin</artifactId>
+			  <configuration>
+				<compilerArgument>-Xlint:unchecked,deprecation</compilerArgument>
+			  </configuration>
+			</plugin>
+			<!-- embedded Tomcat 9 plugin configuration, use "mvn cargo:run" to run -->
+			<plugin>
+			  <groupId>org.codehaus.cargo</groupId>
+			  <artifactId>cargo-maven3-plugin</artifactId>
+			  <version>1.9.1</version>
+			  <configuration>
+				<container>
+				  <containerId>tomcat9x</containerId>
+				  <artifactInstaller>
+					<groupId>org.apache.tomcat</groupId>
+					<artifactId>tomcat</artifactId>
+					<version>9.0.36</version>
+				  </artifactInstaller>
+				</container>
+			  </configuration>
+			</plugin>
+			<!-- workaround for broken OpenJDK 8u181-b13-2 on Debian/Ubuntu which causes
+				 unit tests to fail, see https://issues.apache.org/jira/browse/SUREFIRE-1588 -->
+			<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-surefire-plugin</artifactId>
+			  <configuration>
+				<argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
+			  </configuration>
+			</plugin>
+			<plugin>
+			  <artifactId>maven-war-plugin</artifactId>
+			  <version>2.4</version>
+			  <configuration>
+				<failOnMissingWebXml>false</failOnMissingWebXml>
+			  </configuration>
+			</plugin>
+		  </plugins>
+		</pluginManagement>
+	  </build>
+
 	<modules>
 		<module>winery-persistence</module>
 		<module>winery-api</module>
