--- a/winery-rest/pom.xml
+++ b/winery-rest/pom.xml
@@ -86,6 +86,9 @@
     </dependencies>
 
     <build>
+        <defaultGoal>cargo:run</defaultGoal>
+        <!-- name of the produced war -->
+        <finalName>pa165/rest</finalName>
         <plugins>
             <!--  embedded tomcat -->
             <plugin>
