--- a/winery-api/pom.xml
+++ b/winery-api/pom.xml
@@ -14,5 +14,13 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>API</name>
+
+    <dependencies>
+        <dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.12.3</version>
+		</dependency>
+    </dependencies>
     
 </project>
