--- a/winery-api/pom.xml
+++ b/winery-api/pom.xml
@@ -21,6 +21,12 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.12.3</version>
 		</dependency>
+        <dependency>
+            <groupId>cz.muni.fi.pa165</groupId>
+            <artifactId>Winery-persistence</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     
 </project>
